# pq-abl

./: .gitignore  .gitmodules  CMakeLists.txt  CRITICAL_FIXES.md  DESIGN_FIX.md  FIX_SUMMARY.md  K_LOG_MISMATCH_ANALYSIS.md  K_LOG_MISMATCH_SUMMARY.md  MATH_ANALYSIS.md  MEMORY_FIX_KEYGEN.md  README.md  README_LCP_ABE.md  analyze_noise.py  build.sh  build_test.sh  clear.sh  diag_output.txt  flow.sh  gen_compute_store.sh  gen_log.py  merkle-tree-arm64  mockup_ver.sh  policy_config.json  sha3sum_arm64  sha3sum_x86  single_setup.sh  single_ver.sh  test.sh  test_all.sh  test_diagnostic.c  test_keygen_single.ps1  test_step_by_step.ps1  test_with_timeout.ps1
apps/encrypt_logs_cli/: main.cpp
apps/keygen_smoke/: main.cpp
bloom-filter/: Cargo.toml
bloom-filter/src/: main.rs
demo/: clean.sh  data-retrieve.sh  data-store.sh  data-verify.sh  deploy.sh  generate-rec.sh
include/abe/: abe_params.h  lcp_abe.h
include/batch/: microbatch.h
include/crypto/: aes_gcm.h  sha3.h
include/util/: rng.h
lcp-abe/common/: lcp_params.h  lcp_types.c  lcp_types.h
lcp-abe/decrypt/: lcp_decrypt.c  lcp_decrypt.h
lcp-abe/encrypt/: aes_gcm.c  aes_gcm.h  lcp_encrypt.c  lcp_encrypt.h
lcp-abe/keygen/: lcp_keygen.c  lcp_keygen.h
lcp-abe/policy/: lcp_policy.c  lcp_policy.h
lcp-abe/revocation/: lcp_revocation.c  lcp_revocation.h
lcp-abe/setup/: lcp_setup.c  lcp_setup.h
lcp-abe/test/: benchmark_keygen.c  coeffs_failing_case.c  coeffs_linearity.c  decrypt.c  decrypt_all.c  encrypt.c  encrypt_all.c  failing_terms.h  keygen.c  revocation.c  setup.c  test.bash  test_roundtrip.c  verify_keygen.c
lcp-abe/util/: lcp_util.c  lcp_util.h  view_ctobj.c
merkle-tree/: Cargo.toml
merkle-tree/src/: main.rs
module_gaussian_lattice/Module_BFRS/: Makefile  arithmetic.c  arithmetic.h  common.h  ibe.h  random.c  random.h  sage.sage.py  sampling.c  sampling.h  script.sage  signature.c  signature.h  timing.c
module_gaussian_lattice/Module_BFRS/Misc/: multiplicative_order.c
module_gaussian_lattice/Module_BFRS_ori/: arithmetic.h  main_signature.c  random.c
module_gaussian_lattice/ROM_GPV/: Makefile  arithmetic.c  arithmetic.h  common.h  hash.c  hash.h  main_signature.c  random.c  random.h  sampling.c  sampling.h  sampling_tests.c  script.sage  signature.c  signature.h  signature_tests.c  timing.c  zetas.c
module_gaussian_lattice/Standard_BFRS/: Makefile  arithmetic.c  common.h  crt_trees.c  main_signature.c  sage.sage  sampling.c  sampling.h  sampling_tests.c  signature.c  signature_tests.c  timing.c
module_gaussian_lattice/Standard_BFRS/Misc/: primes.c
scripts/: parse_arith_log.py
smart-contract/script/: anchoring-commit.s.sol  verify-receipt.s.sol
smart-contract/src/: anchoringCommit.sol  deploy.sh  log_hash  merkle-verify  root_CID  test.sh  verifyReceipt.sol
smart-contract/test/: Counter.t.sol
src/abe/: lcp_abe_enc.cpp  lcp_abe_keygen.cpp  lcp_abe_setup.cpp
src/batch/: microbatch.cpp
src/crypto/: aes_gcm.cpp  sha3.cpp
src/glue/: mtrapdoor_wrap.cpp
test_script/: clear.sh  flow.sh  gen_log.py  log_digest  merkle-tree-arm64  single_clean.sh
tools/: compare_sampler_logs.py
